# harness-commander

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RULES.md  SECURITY.md  install-skill.sh  pyproject.toml  test-document.md  uninstall-skill.sh
.claude/tmp/: last-verify.txt  verification-summary.md
.harness/: provider-config.json
claude-skills/harness/: SKILL.md
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: application-command-development.md  core-beliefs.md  distill-host-model-contract.md  harness-engineering.md  index.md  init-templates.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-04-phase2.md  2026-04-04.md  2026-04-06-harness-commander-v1-plan.md  2026-04-06-harness-commander-v1-task-list.md
docs/exec-plans/active/harness-commander-v1/: check.md  distill.md  index.md  plan-check.md  run-agents.md
docs/exec-plans/active/harness-commander-v2/: application-commands-refactor.md  check-ready-integration-coverage.md  distill-host-first-phase2-contracts.md  index.md  phase2-host-model-path-planning.md  product-planning.md  run-agents-check-preflight.md  run-agents-host-model-phase2-contracts.md  run-agents-stage-contracts.md
docs/exec-plans/completed/: 2026-04-07-harness-commander-v1-exec-archive.md  2026-04-07-v1-progress-unification-and-archive.md  2026-04-08-harness-commander-v2-phase1-archive.md  2026-04-08-harness-commander-v2-phase2-implementation-slice-archive.md  repo-bootstrap-and-doc-governance.md
docs/exec-plans/completed/2026-04-07-harness-commander-v1-exec-archive/: collect-evidence.md  install-provider.md  propose-plan.md  run-agents.md  sync.md
docs/exec-plans/completed/2026-04-08-harness-commander-v2-phase1-archive/: check-governance-entry.md  check-ready-integration-coverage.md  distill-integration-failure-coverage.md  distill-source-mapping.md  index.md  product-planning.md
docs/exec-plans/completed/2026-04-08-harness-commander-v2-phase2-implementation-slice-archive/: distill-host-first-phase2-contracts.md  index.md  phase2-host-model-path-planning.md  run-agents-host-model-phase2-contracts.md
docs/product-specs/: harness-commander-acceptance-v1.md  harness-commander-command-protocol-v1.md  harness-commander-testing-v1.md  harness-commander-v1.md  harness-commander.md  index.md  multi-host-orchestration-v1.md  new-user-onboarding.md  packaging-as-skill.md
docs/product-specs/v1/: index.md
docs/product-specs/v1/commands/check/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/collect-evidence/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/distill/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/init/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/install-provider/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/plan-check/: acceptance.md  product.md  protocol.md  testing.md
docs/product-specs/v1/commands/propose-plan/: acceptance.md  product.md  (+2 more)
docs/product-specs/v2/: index.md
docs/references/: design-system-reference-llms.txt  distill-host-model-reference-llms.txt  nixpacks-llms.txt  test-document-llms.txt  uv-llms.txt
scripts/: claude-auto-verify.sh  claude-check-ready-for-pr.sh  claude-stop-reminder.sh
src/harness_commander/: cli.py
src/harness_commander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/harness_commander/application/: commands.py  host_providers.py  model_tasks.py  provider_config.py  provider_installers.py
src/harness_commander/application/command_handlers/: __init__.py  bootstrap.py  check.py  distill.py  provider_install.py  run_agents.py  shared.py  sync.py
src/harness_commander/application/commands/: __init__.py  check.py  collect_evidence.py  distill.py  init.py  plan_check.py  propose_plan.py  shared.py  sync.py
src/harness_commander/domain/: models.py
src/harness_commander/host_templates/cursor/: harness.md
src/harness_commander/infrastructure/: docs.py  filesystem.py  templates.py
src/harness_commander/init_templates/: AGENTS.md  ARCHITECTURE.md
src/harness_commander/init_templates/docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
tests/: test_cli.py  test_integration.py  test_provider_install_modes.py  test_provider_path_resolution.py
tests/acceptance/: test_packaging_and_skill.py
trae-commands/: harness.md
(+54 files in other folders)
